apps/beadyo97-gellgell/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beadyo97-gellgell
  namespace: leaven
  labels:
    app: beadyo97-gellgell
spec:
  selector:
    matchLabels:
      app: beadyo97-gellgell
  template:
    metadata:
      labels:
        app: beadyo97-gellgell
    spec:
      nodeSelector:
        "vke.vultr.com/node-pool": "haenu"
      containers:
      - name: beadyo97-gellgell
        image: hyeonwoo5342/beadyo97-gellgell:8
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: '20Mi'
            cpu: '10m'
          requests:
            memory: '20Mi'
            cpu: '10m'
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
