apps/beadyo97-gellgell/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beadyo97-gellgell-ingress
  namespace: leaven
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gell.leaven.team
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: beadyo97-gellgell
            port:
              number: 80
  - host: gg.leaven.team
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: beadyo97-gellgell
            port:
              number: 80
